fix title on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -115,7 +115,9 @@ body {
             width: 90%;
             display: block;
             text-align: center;
+            padding-right: 0;
             padding-left: 0;
+            margin: auto;
         }
     }
 
